Update for Forum campaign

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,7 @@ development:
   database: campagne_bed_development
   pool: 5
   password:
+  username: campagne_bed_development
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
